k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: ghcr.io/surendra-99/wisecow-test:latest
        ports:
        - containerPort: 4499
      imagePullSecrets:
      - name: regcred
