k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      port: 80
      targetPort: 4499
      protocol: TCP
    - name: https
      port: 443
      targetPort: 4499
      protocol: TCP
  type: NodePort
